syntax = "proto3";

option csharp_namespace = "BeerEShop.Services.Discounts.Grpc.Protos";

// The greeting service definition.
service DiscountProtoService {
	rpc GetDiscount (PurchaseDetailsModel) returns (PurchaseResponseModel);
}

// The request message containing the user's name.
message PurchaseDetailsModel {
  int64 quantity = 1;
}

// The response message containing the greetings.
message PurchaseResponseModel {
      int64 status = 1;
         string Description = 2;
         int64 percentage = 3;
}
